# hepnos_eventselection

./: .gitignore  stracerun
docker/eventselection/: AnalysisData.hpp  CLI11.hpp  CMakeLists.txt  ConfigBlockAdder.hpp  Dockerfile  EventSelectionConfig.hpp  GNUmakefile  GenericBlock.hpp  README.md  Reduce.hpp  SliceID.hpp  SliceIDs.hpp  bm_eventselection.cc  caf_cut.C  caf_validation.C  create_records_dev.cc  create_records_dev.hpp  dataproducts.hpp  disable_depman.cc  disable_depman.hpp  eventselection.cc  hepnos-daemon-config.yaml  hepnos.json  increment_at_most.hpp  load_data.cc  load_hdf5.cc  main.cc  mocks.cc  mocks.hpp  mpi_datatype_pod.hpp  mpi_stuff.cc  mpicpp.hpp  new_eventselection.cc  packages_for_docker.yaml  read_test.cc  run-event-selection.sh  run-pep-benchmark.sh  test_increment_at_most.cc  timing_record.hpp  timing_record_for_bm.hpp  (+2 more)
docker/eventselection/simpletest/: CMakeLists.txt  simple.cc
docker/hepnos/: Dockerfile  GNUmakefile  spack.yaml
docker/nova/: Dockerfile  GNUmakefile
scaling/: results.ipynb  slice_throughput.ipynb
scaling/.ipynb_checkpoints/: results-checkpoint.ipynb
scaling/128_nodes/: slice_throughput.ipynb
scaling/128_nodes/hepnos/s1v1/: errs3858.npy  means_1929.npy  slices_per_sec_errs_7716.npy
scaling/128_nodes/hepnos/s2v2/: means_1929.npy  means_7716.npy  slices_per_sec_errs_7716.npy
scaling/128_nodes/hepnos/s4v2/: errs3858.npy  means_3858.npy  slices_per_sec_errs_1929.npy  slices_per_sec_errs_3858.npy  slices_per_sec_mean_1929.npy
scaling/128_nodes/hepnos/s4v3/: means_1929.npy  means_3858.npy  means_7716.npy  slices_per_sec_mean_1929.npy  slices_per_sec_mean_7716.npy
scaling/128_nodes/root/: root_es3858_errs.npy  root_es3858_mean.npy  root_es7716_errs.npy  root_es7716_mean.npy  root_slices_per_sec_errs_1929.npy  root_slices_per_sec_mean_1929.npy  root_slices_per_sec_mean_7716.npy
scaling/128_nodes/root/es7716/: 597961.output
scaling/256_nodes/: compare_one_eigth_slice_throughput.ipynb  compare_slice_throughput.ipynb  compare_slice_throughput_weak_scale.ipynb  slice_throughput.ipynb
scaling/256_nodes/hepnos/s4v2/: errs3858.npy  means_3858.npy  slices_per_sec_errs_1929.npy  slices_per_sec_errs_3858.npy  slices_per_sec_mean_3858.npy
scaling/256_nodes/hepnos/servers_four/: notes.txt
scaling/256_nodes/hepnos/servers_four/s4v2/: errs1929.npy  errs7716.npy  means_1929.npy  means_7716.npy  slices_per_sec_errs_7716.npy  v2.ipynb  (+2 more)
scaling/256_nodes/hepnos/servers_one_eigth/: errs1929.npy  errs7716.npy  means_1929.npy  means_3858.npy  means_7716.npy  slices_per_sec_errs_3858.npy  slices_per_sec_errs_7716.npy  slices_per_sec_mean_7716.npy  v2.ipynb
scaling/256_nodes/root/: root_es1929_errs.npy  root_es1929_mean.npy  root_es7716_mean.npy  root_results.ipynb  root_slices_per_sec_errs_7716.npy  root_slices_per_sec_mean_1929.npy  root_slices_per_sec_mean_7716.npy
scaling/256_nodes/root/es3858/: 612072.output
scaling/256_nodes/ssd_hepnos/: errs1929.npy  errs3858.npy  errs7716.npy  means_3858.npy  means_7716.npy  slices_per_sec_errs_1929.npy  slices_per_sec_mean_3858.npy
scaling/256_nodes/ssd_hepnos/servers_four/: means_1929.npy  slices_per_sec_errs_3858.npy  slices_per_sec_errs_7716.npy  slices_per_sec_mean_1929.npy  slices_per_sec_mean_7716.npy  v2.ipynb
scaling/256_nodes/ssd_hepnos/servers_one_eigth/: errs1929.npy  slices_per_sec_errs_1929.npy  slices_per_sec_errs_3858.npy  slices_per_sec_errs_7716.npy  slices_per_sec_mean_1929.npy  slices_per_sec_mean_7716.npy  v2.ipynb
scaling/final/: combine_dataframes.ipynb  compare_slice_throughput.ipynb  strong_scaling_plot.ipynb
scaling/final/root/: root-hepnos.csv  root_dataframe.ipynb  root_es3858_errs.npy  root_es3858_mean.npy  root_es7716_errs.npy  root_results.ipynb  root_slices_per_sec_errs_1929.npy  root_slices_per_sec_errs_3858.npy  root_slices_per_sec_mean_3858.npy
scaling/final/root/es1929/: 611672.output
scaling/final/root/es7716/: 613052.output
scaling/hepnos/s1v1/: errs1929.npy  means_3858.npy  means_7716.npy  slices_per_sec_mean_1929.npy  slices_per_sec_mean_7716.npy  v1.ipynb
scaling/hepnos/s2v2/: errs1929.npy  slices_per_sec_errs_1929.npy  slices_per_sec_mean_1929.npy
scaling/hepnos/s4v2/: errs1929.npy  errs7716.npy  means_1929.npy  means_7716.npy  slices_per_sec_errs_7716.npy  slices_per_sec_mean_3858.npy  slices_per_sec_mean_7716.npy  v2.ipynb
scaling/hepnos/s4v3/: errs1929.npy  errs7716.npy  slices_per_sec_errs_1929.npy  slices_per_sec_errs_7716.npy  slices_per_sec_mean_3858.npy  v3.ipynb
scaling/hepnos/v1/: slices_per_sec_errs_1929.npy  slices_per_sec_errs_3858.npy  slices_per_sec_mean_3858.npy  v1.ipynb
scaling/hepnos/v2/: errs3858.npy  errs7716.npy  means_3858.npy  slices_per_sec_errs_3858.npy  slices_per_sec_mean_3858.npy  slices_per_sec_mean_7716.npy  v2.ipynb
scaling/root/: 596866.output  root_errs_times.npy  root_es1929_errs.npy  root_es1929_mean.npy  root_es3858_errs.npy  root_es3858_mean.npy  root_es7716_errs.npy  root_es7716_mean.npy  root_results.ipynb  root_slices_per_sec_errs_3858.npy  root_slices_per_sec_errs_7716.npy  root_slices_per_sec_mean_3858.npy
scaling/root/es3858/: 597886.output
scripts/: create_config.py  hepnos.json  hepnos_rocksdb.json  hepnos_rocksdb.json.in  hepnos_rocksdb.jx9  hepnos_rocksdb_logging.jx9  rocksdb_hepnos_edit.ipynb  run_hepnos_es.sh
(+79 files in other folders)
